force-app/main/default/objects/Booking__c/fields/Account_Name_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Flat_Cost__c</fullName>
    <label>Account Name (Flat Cost)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>