force-app/main/default/objects/Booking__c/fields/Account_Number_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Flat_Cost__c</fullName>
    <label>Account Number (Flat Cost)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>