force-app/main/default/objects/Booking__c/fields/Account_Possession_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Account_Possession_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Possession Checklist</label>
    <type>Checkbox</type>
</CustomField>