force-app/main/default/objects/Booking__c/fields/Agreed_Possession_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Possession_Timeline__c</fullName>
    <label>Agreed Possession Timeline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>