force-app/main/default/objects/Booking__c/fields/Agreement_Copy_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Copy_Upload_Date__c</fullName>
    <label>Agreement Copy Upload Date</label>
    <type>Date</type>
</CustomField>