force-app/main/default/objects/Booking__c/fields/Agreement_Value_Tax__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Tax__c</fullName>
    <label>Agreement Value Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>