force-app/main/default/objects/Booking__c/fields/All_In_Value__c.field-meta.xml
<CustomField>
    <fullName>All_In_Value__c</fullName>
    <label>All In Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>