force-app/main/default/objects/Booking__c/fields/Amount_collected_till_date__c.field-meta.xml
<CustomField>
    <fullName>Amount_collected_till_date__c</fullName>
    <label>Amount collected till date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>