force-app/main/default/objects/Booking__c/fields/Any_Other_Offers__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Offers__c</fullName>
    <label>Any Other Offers</label>
    <type>TextArea</type>
</CustomField>