force-app/main/default/objects/Booking__c/fields/Approval_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Approval_Remarks__c</fullName>
    <label>Approval Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>