force-app/main/default/objects/Booking__c/fields/Approver_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comment_History__c</fullName>
    <label>Approver Comment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>