force-app/main/default/objects/Booking__c/fields/Are_Registration_Docs_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Are_Registration_Docs_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Registration Docs Uploaded</label>
    <type>Checkbox</type>
</CustomField>