force-app/main/default/objects/Booking__c/fields/Booking_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Approval_Status__c</fullName>
    <label>Booking Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending For Approval</fullName>
            </value>
            <value>
                <fullName>Level 1 Approval Pending</fullName>
            </value>
            <value>
                <fullName>Level 1 Approved</fullName>
            </value>
            <value>
                <fullName>Level 2 Approval Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected by Level 1 Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>