force-app/main/default/objects/Booking__c/fields/Booking_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Booking_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>