force-app/main/default/objects/Booking__c/fields/Booking_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Booking_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings4</relationshipName>
    <type>Lookup</type>
</CustomField>