force-app/main/default/objects/Booking__c/fields/Booking_Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancelation_Date__c</fullName>
    <label>Booking Cancelation Date</label>
    <type>DateTime</type>
</CustomField>