force-app/main/default/objects/Booking__c/fields/Booking_Checklist_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Booking_Checklist_Remarks__c</fullName>
    <label>Booking Checklist Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>