force-app/main/default/objects/Booking__c/fields/Booking_Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Checklist_Status__c</fullName>
    <label>Booking Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>