force-app/main/default/objects/Booking__c/fields/Booking_Stage__c.field-meta.xml
<CustomField>
    <fullName>Booking_Stage__c</fullName>
    <label>Booking Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking In-Process</fullName>
            </value>
            <value>
                <fullName>Booking Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancellation In-Process</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>