force-app/main/default/objects/Booking__c/fields/Booking_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sub_Source__c</fullName>
    <label>Booking Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Booking_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Sub_source</valueSetName>
    </valueSet>
</CustomField>