force-app/main/default/objects/Booking__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked Elsewhere</fullName>
            </value>
            <value>
                <fullName>Budget &amp; Finance Issue</fullName>
            </value>
            <value>
                <fullName>Carpet area mismatched</fullName>
            </value>
            <value>
                <fullName>Children not agreed due to old age</fullName>
            </value>
            <value>
                <fullName>CIBIL Issue</fullName>
            </value>
            <value>
                <fullName>Client Not Responding</fullName>
            </value>
            <value>
                <fullName>Cp Negative</fullName>
            </value>
            <value>
                <fullName>Critical issue with Home Exchange</fullName>
            </value>
            <value>
                <fullName>CSOP case got cancelled</fullName>
            </value>
            <value>
                <fullName>Delayed from our end</fullName>
            </value>
            <value>
                <fullName>Family Dispute / Isuue</fullName>
            </value>
            <value>
                <fullName>Financial Issue</fullName>
            </value>
            <value>
                <fullName>Health Issue of Parents</fullName>
            </value>
            <value>
                <fullName>Job Transferred</fullName>
            </value>
            <value>
                <fullName>Land Dispute at native between family members</fullName>
            </value>
            <value>
                <fullName>Loan Eligibility Issue</fullName>
            </value>
            <value>
                <fullName>Location issue</fullName>
            </value>
            <value>
                <fullName>Medical Emergency</fullName>
            </value>
            <value>
                <fullName>Misunderstanding of area</fullName>
            </value>
            <value>
                <fullName>Negative by someone</fullName>
            </value>
            <value>
                <fullName>Not responding</fullName>
            </value>
            <value>
                <fullName>Personal Reason</fullName>
            </value>
            <value>
                <fullName>Plan Change - Bought another asset</fullName>
            </value>
            <value>
                <fullName>Planning To Shift In New Tower</fullName>
            </value>
            <value>
                <fullName>Possession time period is long</fullName>
            </value>
            <value>
                <fullName>RTMI</fullName>
            </value>
            <value>
                <fullName>Schemes Not Applicable (eg Bajaj 3999 )</fullName>
            </value>
            <value>
                <fullName>Shifting Outside Country</fullName>
            </value>
            <value>
                <fullName>Smaller Carpet Area</fullName>
            </value>
            <value>
                <fullName>Want to invest in land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>