force-app/main/default/objects/Booking__c/fields/Cancellation_Remark__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Remark__c</fullName>
    <label>Cancellation Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>