force-app/main/default/objects/Booking__c/fields/Car_Park_Allotment_Count__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Allotment_Count__c</fullName>
    <label>Car Park Allotment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>