force-app/main/default/objects/Booking__c/fields/Challan_GRN_Number__c.field-meta.xml
<CustomField>
    <fullName>Challan_GRN_Number__c</fullName>
    <label>Challan/GRN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>