force-app/main/default/objects/Booking__c/fields/Channel_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Email__c</fullName>
    <label>Channel Partner Email</label>
    <type>Email</type>
</CustomField>