force-app/main/default/objects/Booking__c/fields/Channel_Partner_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Mobile__c</fullName>
    <label>Channel Partner Mobile</label>
    <type>Phone</type>
</CustomField>