force-app/main/default/objects/Booking__c/fields/Channel_Partner_POC__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_POC__c</fullName>
    <label>Channel Partner POC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>