force-app/main/default/objects/Booking__c/fields/Channel_Partner_RERA_No__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_RERA_No__c</fullName>
    <label>Channel Partner RERA No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>