force-app/main/default/objects/Booking__c/fields/Contact_No_of_Contact_Person_at_Bank_FI__c.field-meta.xml
<CustomField>
    <fullName>Contact_No_of_Contact_Person_at_Bank_FI__c</fullName>
    <label>Contact No. of Contact Person at Bank/FI</label>
    <type>Phone</type>
</CustomField>