force-app/main/default/objects/Booking__c/fields/Create_Booking_Verification_CheckList__c.field-meta.xml
<CustomField>
    <fullName>Create_Booking_Verification_CheckList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Booking Verification CheckList</label>
    <type>Checkbox</type>
</CustomField>