force-app/main/default/objects/Booking__c/fields/CRM_Possession_Checklist__c.field-meta.xml
<CustomField>
    <fullName>CRM_Possession_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM Possession Checklist</label>
    <type>Checkbox</type>
</CustomField>