force-app/main/default/objects/Booking__c/fields/Customer_Possession_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Customer_Possession_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Possession Checklist</label>
    <type>Checkbox</type>
</CustomField>