force-app/main/default/objects/Booking__c/fields/Customization_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Customization_Requirements__c</fullName>
    <label>Customization Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>