force-app/main/default/objects/Booking__c/fields/Flat_Type__c.field-meta.xml
<CustomField>
    <fullName>Flat_Type__c</fullName>
    <label>Flat Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>