force-app/main/default/objects/Booking__c/fields/Funding_Plan__c.field-meta.xml
<CustomField>
    <fullName>Funding_Plan__c</fullName>
    <label>Funding Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>