force-app/main/default/objects/Booking__c/fields/Is_Deed_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Deed_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deed Uploaded</label>
    <type>Checkbox</type>
</CustomField>