force-app/main/default/objects/Booking__c/fields/Is_Loan_Sanction_Letter_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Loan_Sanction_Letter_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Loan Sanction Letter Uploaded</label>
    <type>Checkbox</type>
</CustomField>