force-app/main/default/objects/Booking__c/fields/Is_Loan_Sanctioned__c.field-meta.xml
<CustomField>
    <fullName>Is_Loan_Sanctioned__c</fullName>
    <label>Is Loan Sanctioned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>