force-app/main/default/objects/Booking__c/fields/Is_Member_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_Member_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Member Booking</label>
    <type>Checkbox</type>
</CustomField>