force-app/main/default/objects/Booking__c/fields/Is_Receipt_Threshold_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Receipt_Threshold_Amount_Paid__c</fullName>
    <formula>Paid_Receipt_Threshold_Amount__c  = Receipt_Threshold_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Receipt Threshold Amount Paid</label>
    <type>Checkbox</type>
</CustomField>