force-app/main/default/objects/Booking__c/fields/Is_registration_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_registration_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is registration Completed</label>
    <type>Checkbox</type>
</CustomField>