force-app/main/default/objects/Booking__c/fields/Is_SDR_Checklist_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_SDR_Checklist_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SDR Checklist Done</label>
    <type>Checkbox</type>
</CustomField>