force-app/main/default/objects/Booking__c/fields/Is_Source_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Is_Source_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Source Conflict</label>
    <type>Checkbox</type>
</CustomField>