force-app/main/default/objects/Booking__c/fields/Is_TDS_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_TDS_Paid__c</fullName>
    <formula>TDS_Paid_Amount__c &gt;= TDS_Expected_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is TDS Paid</label>
    <type>Checkbox</type>
</CustomField>