force-app/main/default/objects/Booking__c/fields/Is_Welcome_Email_Send__c.field-meta.xml
<CustomField>
    <fullName>Is_Welcome_Email_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Welcome Email Send</label>
    <type>Checkbox</type>
</CustomField>