force-app/main/default/objects/Booking__c/fields/Loan_Sanctioned_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanctioned_Bank_Name__c</fullName>
    <label>Loan Sanctioned Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>