force-app/main/default/objects/Booking__c/fields/Loan_Structure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Structure__c</fullName>
    <label>Loan Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>