force-app/main/default/objects/Booking__c/fields/Name_Of_Bank_Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Bank_Financial_Institution__c</fullName>
    <label>Name Of Bank / Financial Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>