force-app/main/default/objects/Booking__c/fields/Name_of_Contact_Person_at_Bank_FI__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Contact_Person_at_Bank_FI__c</fullName>
    <label>Name of Contact Person at Bank / FI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>