force-app/main/default/objects/Booking__c/fields/Offered_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Offered_to_Customer__c</fullName>
    <label>Offered to Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>