force-app/main/default/objects/Booking__c/fields/Paid_Receipt_Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Receipt_Threshold_Amount__c</fullName>
    <label>Paid Receipt Threshold Amount</label>
    <summarizedField>Threshold_Receipt__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Threshold_Receipt__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Threshold_Receipt__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>