force-app/main/default/objects/Booking__c/fields/Possession_Approved_By_CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>Possession_Approved_By_CRM_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possession Approved By CRM Head</label>
    <type>Checkbox</type>
</CustomField>