force-app/main/default/objects/Booking__c/fields/Possession_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Possession_Checklist__c</fullName>
    <formula>HYPERLINK(&quot;https://sharddhalifespaces--shraddhasb.sandbox.lightning.force.com/PossessionChecklist?recordId=&quot; &amp; Id ,&quot;Click Here!&quot;,&quot;_top&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possession Checklist</label>
    <type>Text</type>
</CustomField>