force-app/main/default/objects/Booking__c/fields/Possession_Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Possession_Checklist_Status__c</fullName>
    <label>Possession Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Re-submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>