force-app/main/default/objects/Booking__c/fields/Possession_Process_Start__c.field-meta.xml
<CustomField>
    <fullName>Possession_Process_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possession Process Start</label>
    <type>Checkbox</type>
</CustomField>