force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Mobile__c</fullName>
    <label>Primary Applicant Mobile</label>
    <type>Phone</type>
</CustomField>