force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Name__c</fullName>
    <label>Primary Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>