force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Title__c</fullName>
    <label>Primary Applicant Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>