force-app/main/default/objects/Booking__c/fields/Receipt_Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Threshold_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Receipt Threshold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>