force-app/main/default/objects/Booking__c/fields/Registration_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Document_Number__c</fullName>
    <label>Registration Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>